@@ -1,3 +1,7 @@
+* 2014-09-22 - jan.bauerdick@open-xchange.com
+
+ - Fix for bug 34341: Added service tracker and fixed broken userId-check in UserConfigProvider
+
 * 2014-09-22 - marc.arens@open-xchange.com
 
  - Fix for bug 34511: Catch possible exception while calling onDispose of subclass and continue with cleanup.
